# stock-selector

./: .gitignore  README.md  portfolio.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
config/: risk_limits.json  trading_config.json  watchlist.json
diary/: 2026-03-27_035308_NVDA_9984T分析.md  2026-03-27_040116_NVDA_9984T_詳細分析.md  2026-03-27_041653_全市場スキャン_有望銘柄発掘.md  2026-03-27_042101_任天堂7974T_分析.md  2026-03-27_042359_楽天銀行_楽天グループ分析.md  2026-03-27_050744_全市場マルチスパン総合分析.md  2026-03-27_132301_1週間スイング有望銘柄スキャン.md  2026-03-27_134919_中期1ヶ月_全市場詳細分析.md  2026-03-28_135226_全市場スイング詳細分析.md  2026-03-28_182033_自動発掘_スイング詳細分析.md  2026-03-29_015347_全市場全スパン詳細分析.md  2026-03-29_025302_自動発掘_中期詳細分析.md  2026-03-31_064442_自動分析_日本株_中期.md  2026-03-31_131757_自動分析_日本株_中期.md  2026-03-31_132426_自動分析_AI_日本株_中期.md  2026-03-31_135118_自動分析_日本株_中期.md  2026-03-31_135503_自動分析_AI_日本株_中期.md  2026-03-31_140428_自動分析_AI_全市場_中期.md  2026-03-31_140733_自動分析_AI_日本株_中期.md  2026-03-31_151622_自動分析_AI_全市場_中期.md  2026-04-01_002716_自動分析_AI_全市場_中期.md  2026-04-01_003536_自動分析_AI_日本株_中期.md  2026-04-01_004044_自動分析_AI_全市場_中期.md  2026-04-01_012210_自動分析_AI_全市場_中期.md  2026-04-01_035509_自動分析_AI_日本株_中期.md  2026-04-01_121906_日本株中期詳細分析.md  2026-04-01_131733_全市場全スパン詳細分析.md  2026-04-01_154153_全市場全スパン詳細分析.md  2026-04-01_154839_日本株全スパン詳細分析.md  2026-04-01_163724_トレード実行レポート.md  2026-04-02_015526_自動分析_日本株_中期.md
docs/: TRADING_SPEC.md
scripts/: alert.py  auto_analyze.py  auto_trade.py  backtest.py  event_impact_analyzer.py  fetch_news.py  fetch_prices.py  macro.py  (+7 more)
(+334 files in other folders)
