[project]
name = "stock-selector"
version = "0.1.0"
description = "AI-driven stock screening, technical analysis, and simulated trading system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0",
    "numpy>=1.26",
    "ta>=0.11.0",
    "requests>=2.31",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportOptionalMemberAccess = "warning"
reportIndexIssue = "warning"
